--- a/package.json
+++ b/package.json
@@ -32,5 +32,17 @@
     "mocha": "^5.2.0",
     "nock": "^10.0.0",
     "pre-commit": "^1.1.1"
-  }
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeremypoulter/node-emoncms.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jeremypoulter/node-emoncms/issues"
+  },
+  "homepage": "https://github.com/jeremypoulter/node-emoncms#readme"
 }
