--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "lint": "eslint lib",
-    "test": "mocha --reporter spec"
+    "test": "mocha",
+    "coverage": "nyc --reporter=html npm test"
   },
   "standard": {
     "ignore": [
@@ -28,9 +29,9 @@
     "chai": "^3.2.0",
     "eslint": "^4.16.0",
     "eslint-plugin-mocha": "^5.2.0",
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "nock": "^10.0.0",
+    "nyc": "^14.1.1",
     "pre-commit": "^1.1.1"
   },
   "directories": {
